# MyLittleBotty

./: .gitignore  Cargo.toml  README.md  README_ZN.md  build.rs
doc/: chatbot-provider-plugin.md
src/: main.rs
src/botty/: botty-body.rs  botty-boss.rs  botty-brain.rs  botty-crond.rs  botty-guy.rs
src/frontend/: app.rs  frontend_app.rs  frontend_service.rs  mod.rs  tui.rs  webui.rs
src/io/: input.rs  mod.rs  output.rs  transport.rs  tui.rs
src/llm_provider/: mod.rs  provider-anthropic.rs  provider-minimax.rs  provider-openai.rs  provider_minimax.rs
src/skill/: buildin-crond.rs  buildin-watch.rs  mod.rs
startup/: build.sh  install.sh  publish.sh  uninstall.sh
