[package]
name = "mylittlebotty"
version = "0.0.3"
edition = "2021"

authors = ["Kizi Wang <wangqizhi1987@gmail.com>"]
description = "Botty,Botty! Do my order!"
license = "MIT"
repository = "https://github.com/wangqizhi/MyLittleBotty"
readme = "README.md"
keywords = ["bot", "cli"]
default-run = "mylittlebotty"

[package.metadata.botty]
download_url = "https://github.com/wangqizhi/MyLittleBotty/releases/latest/download/mylittlebotty"
latest_release_api_url = "https://api.github.com/repos/wangqizhi/MyLittleBotty/releases/latest"

[dependencies]
libc = "0.2"
