[package]
name = "mylittlebotty"
version = "0.0.6"
edition = "2021"

authors = ["Kizi Wang <wangqizhi1987@gmail.com>"]
description = "Botty,Botty! Do my order!"
license = "MIT"
repository = "https://github.com/wangqizhi/MyLittleBotty"
readme = "README.md"
keywords = ["bot", "cli"]
default-run = "mylittlebotty"

[package.metadata.botty]
download_url = "https://github.com/wangqizhi/MyLittleBotty/releases/latest/download/mylittlebotty"
latest_release_api_url = "https://api.github.com/repos/wangqizhi/MyLittleBotty/releases/latest"
install_script_url = "https://raw.githubusercontent.com/wangqizhi/MyLittleBotty/main/startup/install.sh"

[dependencies]
libc = "0.2"
crossterm = "0.28.1"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
unicode-width = "0.2"
